--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-flask
-flask_cors
-pydantic
-werkzeug
-python-multipart
-Pyjwt
+Flask
+Flask-Cors
+PyJWT
 python-dotenv
-librosa
+sqlite3
 scikit-learn
-requests
+numpy
+librosa
